@@ -18,7 +18,7 @@ import java.io.File;
 import java.io.FilenameFilter;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.nio.file.attribute.FileTime;
 import java.time.LocalDate;
 import java.time.ZoneId;
@@ -51,10 +51,8 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestPart;
 import org.springframework.web.multipart.MultipartFile;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
-
 import io.swagger.v3.oas.annotations.Parameter;
+import tools.jackson.databind.ObjectMapper;
 
 @Controller
 public class BidsImporterApiController implements BidsImporterApi {
@@ -160,7 +158,7 @@ public class BidsImporterApiController implements BidsImporterApi {
             // Iterate over session files
             boolean examCreated = false;
             for (File sessionFile : examFiles) {
-                FileTime creationTime = (FileTime) Files.getAttribute(Paths.get(sessionFile.getAbsolutePath()), "creationTime");
+                FileTime creationTime = (FileTime) Files.getAttribute(Path.of(sessionFile.getAbsolutePath()), "creationTime");
                 ExaminationDTO examination;
                 Long examId;
 
@@ -227,7 +225,7 @@ public class BidsImporterApiController implements BidsImporterApi {
             }
         }
         importJobStatusService.setFinished(tempDirId, importJob);
-        return new ResponseEntity<>(null, HttpStatus.OK);
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 
     /**
@@ -251,7 +249,7 @@ public class BidsImporterApiController implements BidsImporterApi {
      * @param dataTypeFile
      * @param importJob
      */
-    private void importSession(File dataTypeFile, ImportJob importJob) throws AmqpException, JsonProcessingException {
+    private void importSession(File dataTypeFile, ImportJob importJob) throws AmqpException {
         if (dataTypeFile.isDirectory()) {
             importJob.setWorkFolder(dataTypeFile.getAbsolutePath());
             LOG.debug("We found a data folder " + dataTypeFile.getName());
